--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/jekyll-simple" # the subpath of your site, e.g. /blog
 url: "http://wildflame.me" # the base hostname & protocol for your site
-twitter_username: Taffyer 
-github_username:  wild-flame 
+twitter_username: samuelwu_
+github_username:  wusamuel 
 
 # Build settings
 markdown: kramdown
